# CompareVolumeDemo

./: CMakeLists.txt  Readme.txt
demo/: demo.cpp
src/: CMakeLists.txt  DBAdapter.cpp  DBAdapter.h  DBParser.cpp  DBParser.h  LCSAlgorithm.h  LCSIndexComparator.cpp  LCSIndexComparator.h  fileIndex.h  fileIndexArithmetic.cpp  fileIndexArithmetic.h  fileSystemUtilits.cpp  fileSystemUtilits.h  indexComparator.cpp  indexComparator.h  volumeCompare.cpp  volumeCompare.h
tests/: CMakeLists.txt  runTests.cpp  test.h  testCompareFiles.cpp  testCompareFiles.h  testDB.cpp  testDB.h  testIndex.cpp  testIndex.h  testOnelineFiles.cpp  testOnelineFiles.h  testRunner.cpp  testRunner.h  testSubfolder.cpp  testSubfolder.h  testVolumeCompare.cpp  testVolumeCompare.h
tests/assets/asset3/: test_ver2.txt
tests/assets/asset5/: test_ver1.txt  test_ver2.txt
